@@ -12,6 +12,8 @@ In Progress
   shells, etc.)
 - Armitage now logs launches of the enum_dns module.
 - Hosts -> DNS Enumerate now populates NS field with highlighted host.
+- Armitage now adds a tooltip to tabs associated with a session. Hover your 
+  mouse over a tab to see which host the tab is associated with.
 
 22 Mar 12
 ---------
